# AutoShorts

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/autoshorts/: __init__.py  experimental.py  fluximages.py  main.py  yt_summarizer.py
src/autoshorts/cli/: __init__.py  new.py
src/autoshorts/cli/commands/: explainer.py  help_cmd.py
src/autoshorts/generators/: __init__.py  explainer.py
src/autoshorts/modules/: __init__.py  config.py  image_searcher.py  logging_system.py  metadata.py  script_generator.py  subtitle_system.py  tts_system.py  utils.py  video_background.py  video_compositor.py  web_search.py
tests/: __init__.py  conftest.py  test_cli.py  test_config.py  test_edge_cases.py  test_experimental.py  test_experimental_comprehensive.py  test_fluximages.py  test_init.py  test_integration.py  test_script_generator.py  test_subtitle_system.py  test_tts_system.py  test_utils.py  test_video_background.py  test_video_compositor.py  test_web_search.py  test_yt_summarizer.py
