[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autoshorts"
version = "1.0.0"
description = "Automated Viral Video Generator"
authors = [{name = "AutoShorts Team"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "moviepy>=1.0.3",
    "edge-tts>=6.1.0",
    "requests>=2.28.0",
    "yt-dlp>=2023.1.0",
    "webvtt-py>=0.4.6",
    "pathlib2>=2.3.7; python_version<'3.4'",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=22.0.0",
    "ruff>=0.0.200",
    "mypy>=1.0.0",
]

[project.scripts]
autoshorts-flux = "autoshorts.fluximages:main"
autoshorts-yt = "autoshorts.yt_summarizer:main"
autoshorts-beta = "autoshorts.experimental:cli_main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B", "C90"]
ignore = ["E501", "B008", "N806", "C901"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --cov=src --cov-report=html --cov-report=term-missing --cov-fail-under=50"
asyncio_mode = "auto"
